* Merge the pixel price radio and value selection together * DOM, Chart, notification header exactly the same size as the chart header * DOM buttons are aligned incorrectly * No Connection changes * Indicator divider placing * Masking of account list fix * Duplicate Notification changes * Timezone alighment changes

--- a/projects/chart/src/indicators/indicators.component.scss
+++ b/projects/chart/src/indicators/indicators.component.scss
@@ -980,7 +980,7 @@ formly-form {
 
 .bottom-menu {
   margin-top: 6px;
-  height: 115px;
+  height: 235px;
   display: flex;
   padding-left: 23px;
   border-top: 1px solid $light3;
