--- a/projects/timezones-clock/src/clock/clock.component.scss
+++ b/projects/timezones-clock/src/clock/clock.component.scss
@@ -38,6 +38,10 @@
     }
   }
 
+  .timeAlign{
+    padding-left: 5px;
+  }
+
   &:not(&:last-child) {
     &:after {
       position: absolute;
